@@ -5,6 +5,10 @@ Changelog
 1.1.3 (unreleased)
 ------------------
 
+- Adjusts the date and time displayed for each news item in a news folder.
+  Doesnt show time if there is no time set.
+  [raphael-s]
+  
 - Adds a profile which installs an additional feature allowing to
   mark news item to be shown on the homepage (if the news listing block
   is configured to do so).
